force-app/main/default/objects/Technical_Question__c/Technical_Question__c.object-meta.xml
<CustomObject>
    <description>Exercices d entretien technique générés par IA (Groq LLaMA 3.3 70B), liés à une offre d emploi. Le candidat code en temps réel et l IA évalue la qualité de la réponse.</description>
    <label>Technical Question</label>
    <nameField>
        <displayFormat>TQ-{00000}</displayFormat>
        <label>Question ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technical Questions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>