force-app/main/default/objects/Technical_Question__c/fields/AI_Feedback__c.field-meta.xml
<CustomField>
    <fullName>AI_Feedback__c</fullName>
    <label>AI Feedback</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>