force-app/main/default/objects/Technical_Question__c/fields/AI_Score__c.field-meta.xml
<CustomField>
    <fullName>AI_Score__c</fullName>
    <label>AI Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>