force-app/main/default/objects/Technical_Question__c/fields/Candidate_Answer__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Answer__c</fullName>
    <label>Candidate Answer</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>