force-app/main/default/objects/Technical_Question__c/fields/Difficulty__c.field-meta.xml
<CustomField>
    <fullName>Difficulty__c</fullName>
    <label>Difficulty</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>easy</fullName><default>false</default><label>Easy</label></value>
            <value><fullName>medium</fullName><default>true</default><label>Medium</label></value>
            <value><fullName>hard</fullName><default>false</default><label>Hard</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>