force-app/main/default/objects/Technical_Question__c/fields/Evaluation_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Criteria__c</fullName>
    <label>Evaluation Criteria</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>