force-app/main/default/objects/Technical_Question__c/fields/Expected_Solution__c.field-meta.xml
<CustomField>
    <fullName>Expected_Solution__c</fullName>
    <label>Expected Solution</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>