force-app/main/default/objects/Technical_Question__c/fields/Job_Posting__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Posting</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Technical Questions</relationshipLabel>
    <relationshipName>Technical_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>