force-app/main/default/objects/Technical_Question__c/fields/Opp_Reference__c.field-meta.xml
<CustomField>
    <fullName>Opp_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opp Reference</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Tech Questions Ref</relationshipLabel>
    <relationshipName>Tech_Questions_Ref</relationshipName>
    <type>Lookup</type>
</CustomField>