force-app/main/default/objects/Technical_Question__c/fields/Problem_Text__c.field-meta.xml
<CustomField>
    <fullName>Problem_Text__c</fullName>
    <label>Problem Text</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>