force-app/main/default/objects/Technical_Question__c/fields/Problem_Type__c.field-meta.xml
<CustomField>
    <fullName>Problem_Type__c</fullName>
    <label>Problem Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>code</fullName><default>true</default><label>Code</label></value>
            <value><fullName>architecture</fullName><default>false</default><label>Architecture</label></value>
            <value><fullName>debug</fullName><default>false</default><label>Debug</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>