force-app/main/default/objects/Technical_Question__c/fields/Time_Limit__c.field-meta.xml
<CustomField>
    <fullName>Time_Limit__c</fullName>
    <defaultValue>600</defaultValue>
    <label>Time Limit (seconds)</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>